--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>PRIMERA PRE-ENTREGA</h1>
-    <P>Christian Bustamante, comision 33985.</P>
+    <header>
+        
+    </header>
     <script src="./script.js"></script>
 </body>
 </html>
